- neuer Unterstuetzer - einige Beweise ergaenzt - kleinere Fehler ausgemerzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1089 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -244,6 +244,7 @@
     \texttt{<jens@kubieziel.de>}} (2004--2007)
    \item \href{mailto:jimmi_usa2000@yahoo.com}{Kim Muckelbauer
     \texttt{<jimmi\_usa2000@yahoo.com>}} (2007)
+   \item \href{mailto:wichti@online.de}{Carolin Rabsahl} (2007)
   \end{itemize}
 }
 
@@ -325,7 +326,7 @@ Versuchsausgänge klassifiziert.\\
 Beispiel: Würfel $\rightarrow \Omega = \{1,2,3,4,5,6\}$, Messung
 $\rightarrow M\subseteq \R$, Münzwurf $\rightarrow \Omega =\{W, Z\}=
 \{0, 1\}$
-\item System der Ereignisse - $\CF$\\
+\item System der Ereignisse - $\CF\in\FP(\Omega)$\\
 Die Menge $\CF$ beinhaltet zulässige Aussagen über das
 Versuchsergebnis und es gilt $\CF\subseteq 2^\Omega$\footnote{Die
   \highl{Potenzmenge} wird auch mit $\FP$ bezeichnet. Damit gilt hier: $\CF
@@ -359,7 +360,9 @@ Daraus ergibt sich der Aufbau der Axiomatik.
 
 \begin{itemize}
 \item Beispiel: $n$-mal Würfeln: $h_n(A)=\frac{\text{Anzahl des
-      Eintretens von } A}{n}\xrightarrow{n\rightarrow\infty} =\colon P(A)$
+      Eintretens von } A}{n}\xrightarrow{n\rightarrow\infty} =\colon P(A)$.
+  Man bezeichnet $h_{n}(A)$ als \highl[Häufigkeit!relative]{relative
+  Häufigkeit} des Eintretens.
 \item $0\leq h_n(A)\leq 1\Rightarrow 0\leq P(A)\leq 1$
 \item $h_n(\Omega)=1=P(\Omega)$
 \item $A\cap B=\emptyset\Rightarrow h_n(A\cup B)=h_n(A)+h_n(B)
@@ -378,7 +381,7 @@ Im folgenden gilt immer:
 \end{itemize}
 
 \begin{definition}
-  $\CF$ heißt \highl{Algebra}, wenn gilt:
+  Die Menge $\CF$ heißt \highl{Algebra}, wenn gilt:
   \begin{enumerate}[(1)]
   \item $\emptyset\in\CF$
   \item $A\in\CF\Rightarrow A^c\in\CF$
@@ -395,7 +398,8 @@ Punkte (1) und (2) gelten und zusätzlich\\
   Jede $\sigma$-Algebra ist eine Algebra.
 \begin{proof}
   Zum Beweis genügt es zu zeigen, dass eine beliebige
-  $\sigma$-Algebra $\CF$ den Punkt (3) der Definition erfüllt. Es
+  $\sigma$-Algebra $\CF$ den Punkt (3) der Definition erfüllt. Denn die ersten
+  beiden Eigenschaften teilen Algebra und $\sigma$"~Algebra. Es
   gelten die Eigenschaften (1), (2) und (3'). Man setzt nun $A_1=A,
   A_2=B, A_n=\emptyset (n=3,4,\ldots)$. Dann gilt $A_1, A_2,
   \ldots\in\CF \Rightarrow \bigcup A_k$
@@ -407,7 +411,7 @@ Punkte (1) und (2) gelten und zusätzlich\\
   \item Die Umkehrung von \autoref{satz:s-alg} ist in der Regel
     falsch, d.\,h. es gibt Algebren, die keine $\sigma$-Algebra
     sind. Das klassiche Beispiel hierfür ist: 
-    \[\Omega=\N; \CF\colon=\{A\subseteq\N| A\vee A^c\text{ endlich}\}\]
+    \[\Omega=\N; \CF\colon=\{A\subseteq\N| A\text{ endlich oder} A^c\text{ endlich}\}\]
     Eigenschaften:
     \begin{enumerate}[(1)]
     \item klar
@@ -437,7 +441,7 @@ Punkte (1) und (2) gelten und zusätzlich\\
 \end{remark}
 
 \begin{satz}\label{satz:122}
-  Sei $\CF$ eine Algebra. Dann ist $\Omega\in\CF$ und für alle
+  Sei $\CF$ eine Algebra über $\Omega$. Dann ist $\Omega\in\CF$ und für alle
   Folgen $A_1,\ldots,A_n\in\CF (n\in\N)$ gelten:
   \begin{enumerate}[a)]
   \item $\bigcup_{k=1}^n A_k\in\CF$
@@ -447,10 +451,10 @@ Punkte (1) und (2) gelten und zusätzlich\\
   \begin{itemize}
   \item $\Omega$ ist ein Element von $\CF$. Denn nach (1) gilt
     $\emptyset\in\CF$ und nach (2) folgt $\emptyset^c=\Omega\in\CF$.
-  \item[zu a)] Nach Eigenschaft (3) gilt der Punkt a) für $n=2$.\\
-    Annahme: $\bigcup_{k=1}^n A_k\in\CF
-    (A_1,\ldots,A_n\in\CF)$\\
-    Beweis: $A_1,\ldots,A_{n+1}\in\CF (\bigcup_{k=1}^{n+1}
+  \item[zu a)] Nach Eigenschaft (3) gilt der Punkt a) für $n=2$. Also haben
+    wir $A_{1}, A_{2}\in\CF\Rightarrow A_{1}\cup A_{2}\in\CF$. Nun gelte:
+    $\bigcup_{k=1}^n A_k\in\CF  (A_1,\ldots,A_n\in\CF)$. Im Induktionsschritt
+    können wir zeigen: $A_1,\ldots,A_{n+1}\in\CF (\bigcup_{k=1}^{n+1}
     A_k=\bigcup_{k=1}^n A_k\cup A_{n+1})\Rightarrow
     \bigcup_{k=1}^{n+1} A_{n+1}\in\CF$
   \item[zu b)] Nach Eigenschaft (3) kann folgender Schluss gezogen
@@ -472,8 +476,8 @@ Punkte (1) und (2) gelten und zusätzlich\\
 \end{satz}
 
 \begin{remark}
-  Eine $\sigma$-Algebra ist \emph{nicht} gegenüber
-  überabzählbarer Vereinigung abgeschlossen.
+  Eine $\sigma$-Algebra ist i.\,A. \emph{nicht} gegenüber
+  überabzählbarer Vereinigung bzw. Durchschnitt abgeschlossen.
 \end{remark}
 
 \begin{beispiel}
@@ -482,7 +486,8 @@ Punkte (1) und (2) gelten und zusätzlich\\
     $\CF=\{\emptyset, \Omega\}$.
   \item Die "`größte"' $\sigma$-Algebra ist $\CF=\FP(\Omega)$.
   \item Sei $\emptyset\subset A\subset\Omega, \CF=\{\emptyset, \Omega,
-    A, A^c\}$.
+    A, A^c\}$. Der Nachweis, dass dies eine $\sigma$"~Algebra ist, lässt sich
+    leicht führen. 
   \end{enumerate}
 \end{beispiel}
 
@@ -517,9 +522,16 @@ Punkte (1) und (2) gelten und zusätzlich\\
 \end{definition}
 
 \begin{remark}
-  Aus \autoref{satz:s-erzeug} folgt $\sigma(\FE)$ ist eine
+  \begin{enumerate}
+   \item Aus \autoref{satz:s-erzeug} folgt $\sigma(\FE)$ ist eine
   $\sigma$-Algebra. Gleiche Konstruktion ist auch für alle
-  Algebren möglich. 
+  Algebren möglich.
+   \item $\FE_{1}\subseteq\FE_{2}\Rightarrow
+    \sigma(\FE_{1})\subseteq\sigma(\FE_{2})$
+   \item Sei $\FE\subseteq\FB$ und $\FB$ eine $\sigma$-Algebra. Dann folgt,
+    $\sigma(\FE)\subseteq\FB$ 
+  \end{enumerate}
+  
 \end{remark}
 
 \begin{beispiel}
@@ -540,7 +552,7 @@ Punkte (1) und (2) gelten und zusätzlich\\
 
 \begin{satz}
 \label{satz:b-erzeugen}
-  Jedes der folgenden Mengensysteme ist ein Erzeugendensystem für
+  Jedes der folgenden Mengensysteme von Intervallen ist ein Erzeugendensystem für
   $\FB$ (Es gilt: $\FE_1,\ldots,\FE_8$ sind abzählbar.):
   \begin{align*}
     \FE_1&\colon=\{(\alpha,\beta)|\alpha,\beta\in\R \text{ und rational}\}\\
@@ -554,7 +566,7 @@ Punkte (1) und (2) gelten und zusätzlich\\
   \end{align*}
 \begin{proof}
   \begin{itemize}
-  \item[zu $\FE_1$] Sei $\FE=\{A\subseteq\R| A \text{
+  \item[zu $\FE_1$] Sei $\FE_{1}\subseteq\FE=\{A\subseteq\R| A \text{
       offen}\}\Rightarrow \FB=\sigma(\FE)$. Nach der Definition gilt
     $\FE_1\subseteq\FE\Rightarrow\sigma(\FE_1)\subseteq\sigma(\FE)=\FB$. Damit
     ist noch zu zeigen, dass $\FB\subseteq\sigma(\FE_1)$. Sei
@@ -563,10 +575,6 @@ Punkte (1) und (2) gelten und zusätzlich\\
     $K_r(x)\in\FE_1\subseteq \sigma(\FE_1)\Rightarrow A\in\sigma
     (\FE_1)\Rightarrow\FE\subseteq\sigma(\FE_1)\Rightarrow \sigma(\FE)
     =\FB\subseteq\sigma(\sigma(\FE_1))=\sigma(\FE_1)$
-  \item[zu $\FE_6$] $\forall\beta ((-\infty,\beta]^c=(\beta,\infty)
-    \in\FE\subseteq\sigma(\FE))\Rightarrow\FE_6=(-\infty,\beta]
-    \subseteq\sigma(\FE)\Rightarrow\sigma(\FE_6)\subseteq \sigma(\FE)$
-    Beweis für $\sigma(\FE)\subseteq\sigma(\FE_6)$ fehlt noch.
   \end{itemize}
 \end{proof}
 \end{satz}
@@ -579,9 +587,9 @@ $\sigma$-Algebra über $\Omega$.
 \begin{definition}
   \begin{itemize}
   \item Das Tupel $[\Omega,\CF]$ heißt \highl[Raum!messbarer]{messbarer Raum}.
-  \item Eine nichtnegative Funktion $\mu$ auf
-    $\CF$\footnote{$\mu\colon\CF\rightarrow [0,+\infty]$} heißt
-    \highl{Maß} auf $[\Omega,\CF]$, wenn gilt 
+  \item Eine nichtnegative Funktion $\mu\colon \CF\rightarrow[0,+\infty]$ auf
+    $\CF$ heißt
+    \highl{Maß} (auf $[\Omega,\CF]$), wenn gilt 
     \begin{inparaenum}[1.]
     \item $\mu(\emptyset)=0$
     \item Für paarweise disjunkte Folgen $(A_k)_{k=1}^\infty$ aus
@@ -621,7 +629,7 @@ $\sigma$-Algebra über $\Omega$.
   Summenbildung ändert nichts.
   \begin{itemize}
   \item[zu 1)] $\mu(\emptyset)=\sum_{k=1}^\infty \alpha_i\mu_i
-    (\emptyset)=0$
+    (\emptyset)=0$. Denn $\mu_{i}(\emptyset)=0$.
   \item[zu 2)] Seien $(A_k)_{k=1}^\infty$ paarweise disjunkt aus
     $\CF$.
     \begin{align*}
@@ -635,6 +643,11 @@ $\sigma$-Algebra über $\Omega$.
   \end{itemize}
 \end{proof}
 \end{satz}
+
+\begin{beispiel}
+  Sei $\Omega=\N$ und $\CF=\FP(\N)$. Dann kann man das Maß wie folgt
+  definieren: $\mu=\sum_{k=1}^{\infty} \alpha_{k} \delta_{k}$.
+\end{beispiel}
 
 \begin{satz}
 \label{satz:folgenmass}
@@ -672,16 +685,27 @@ $\sigma$-Algebra über $\Omega$.
     Umkehrung ist jedoch falsch.
   \item \highl{Subadditivität}: Für alle
     $A_1,\ldots, A_n\in\CF$ gilt: $\mu(\bigcup_{k=1}^n A_k)\leq
-    \sum_{k=1}^n \mu(A_k)$
+    \sum_{k=1}^n \mu(A_k)$. Der Beweis wird per Induktion geführt.
   \end{enumerate}
 \end{remark}
+
+\begin{beispiel}
+  Sei $\Omega=\N, \CF=\FP(\N)$ und das Maß ist definiert: $\mu(A)=
+  \begin{cases}0 & A < \infty\\ +\infty & A = \infty\end{cases}$. Sei weiter
+  $A_{k}=\{2k\}$. Dann gilt $\mu(\bigcup_{k=1}^{n} A_{k})=\sum_{k=1}^{n}
+  \mu(A_{k})=0$. Denn auch die Vereinigung ist wieder endlich. Wenn wir zur
+  unendlichen Vereinigung übergehen, ändert sich die Situation. Die Menge, die
+  durch die Vereinigung entsteht, ist die Menge der geraden Zahlen. Diese ist
+  unendlich als gilt: $\mu(\bigcup_{k=1}^{\infty}
+  A_{k}=+\infty\neq0=\sum_{k=1}^{\infty} A_{k}$.
+\end{beispiel}
 
 \begin{satz}[elementare Eigenschaften]
 \label{satz:elemEigen}
   Sei $[\Omega,\CF,\mu]$ ein Maßraum und $A,B\in\CF$. Dann gilt:
   \begin{enumerate}[(a)]
   \item $\mu(A \cup B)\leq\mu(A)+\mu(B)$
-  \item $A\subseteq B\Rightarrow \mu(A)\leq\mu(B)$
+  \item $A\subseteq B\Rightarrow \mu(A)\leq\mu(B)$ (Monotonie des Maßes)
   \item $A\subseteq B, \mu$ endlich $\Rightarrow \mu(B\setminus A) =
     \mu(B) -\mu(A)$
   \end{enumerate}
@@ -719,7 +743,8 @@ $\sigma$-Algebra über $\Omega$.
   \end{enumerate}
 \begin{proof}
   \begin{itemize}
-  \item[zu a)] Setzen $B_1\colon=A_1, B_{n+1}=A_{n+1}\setminus A_n$. Damit
+  \item[zu a)] Für den Beweis ist die Forderung $\mu<\infty$ nicht notwendig.
+    Setzen $B_1\colon=A_1, B_{n+1}=A_{n+1}\setminus A_n$. Damit
     gelten folgende Tatsachen:
     \begin{enumerate}
     \item Alle $B_k$ sind paarweise disjunkt.
@@ -740,7 +765,8 @@ $\sigma$-Algebra über $\Omega$.
     A_n)^c)= \mu(\Omega\setminus(\bigcap_{n=1}^\infty A_n))
      \overset{\text{\autoref{satz:elemEigen} c}}{=} \mu(\Omega)-\mu(\bigcap A_n)$\\
     $\mu(A_n^c)=\mu(\Omega\setminus A_n)=\mu(\Omega)-\mu(A_n)
-    \Rightarrow \lim_{n\rightarrow\infty} \mu(A_n)$
+    \Rightarrow \lim_{n\rightarrow\infty} \mu(A_n)$.\\
+    In der Literatur werden z.\,T. schwächere Forderungen angesetzt.
   \end{itemize}
 \end{proof}
 \end{satz}
@@ -954,7 +980,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
   \begin{enumerate}[(F1)]
   \item Sei $F(x)\colon=P((-\infty,x))$ mit $x\in\R$. Dann gilt $(-\infty,
     x)\subseteq (-\infty, y)$, da $x\leq y$. Nach 
-    \autoref{satz:elemEigen} Punkt b hat man $P((-\infty, x))\leq
+    \autoref{satz:elemEigen} Punkt b hat man $F(x)\leq F(y)\Rightarrow P((-\infty, x))\leq
     P((-\infty, y))\Rightarrow F(x)\leq F(y)$
   \item Seien $x\in\R$ und $x_n\leq x_{n+1}, \lim x_n=x$. Damit folgt:
     $(-\infty, x_n)\subseteq (-\infty, x_{n+1})$ und $(-\infty, x)=
@@ -962,8 +988,9 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
     \autoref{satz:stetigkeit} a erhält man $F(x)=P((-\infty,
     x))=P(\bigcup_{n=1}^\infty(-\infty, x_n))=\lim_{n\rightarrow\infty} P((-\infty, x_n))=
     \lim F(x_n)$.
-  \item Sei $x_n \uparrow +\infty$\footnote{d.\,h. $x_n\subseteq
-      x_{n+1}, x_n\xrightarrow{n\rightarrow\infty}+\infty$}. Damit
+  \item Sei $x_n \uparrow +\infty$\footnote{d.\,h. $x_n\leq
+      x_{n+1}, x_n\xrightarrow{n\rightarrow\infty}+\infty\Rightarrow
+    (-\infty,x_{n})\leq(-\infty,x_{n+1})$}. Damit
     gilt wieder die schon oben angeführte Teilmengenbeziehung und es
     folgt: $\bigcup_{n=1}^\infty (-\infty, x_n)=\R$. Wie bereits oben
     erhält man nun durch den \autoref{satz:stetigkeit} a, dass
@@ -1016,7 +1043,26 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
   trivial nachzuweisen. Das Wahrscheinlichkeitsmaß $\Ex_\lambda$
   mit der Verteilungsfunktion $F_\lambda$ heißt
   \highl{Exponentialverteilung} mit dem Parameter $\lambda$.
+  \begin{proof}
+    Für die Eigenschaft (F1) nehmen wir o.\,B.\,d.\,A. an, dass $x\leq y$
+    gilt. Dann können wir folgende Fälle unterscheiden:
+    \begin{enumerate}[1. F{a}ll]
+     \item $y\leq0\Rightarrow F_{\lambda}(x)=F_{\lambda}(y)$
+     \item $y>0, x\leq0\Rightarrow F_{\lambda}(x)=0,
+      F_{\lambda}(y)=1-e^{-\lambda y}\geq0\Rightarrow F_{\lambda}(x)\leq
+      F_{\lambda}(y)$
+     \item $0<x\leq y\Rightarrow e^{\lambda x}\leq e^{\lambda y}\Rightarrow
+      e^{-\lambda x}\geq e^{-\lambda y}\Rightarrow1-e^{-\lambda
+      x}\leq1-e^{-\lambda y}\Rightarrow F_{\lambda}(x)\leq F_{\lambda}(y)$.
+    \end{enumerate}
+    Die Eigenschaften (F2) und (F4) sind sofort klar. Zu (F3) ist
+    $e^{\lambda x}\xrightarrow{x\rightarrow+\infty} +\infty\Rightarrow
+    e^{-\lambda x}\xrightarrow{x\rightarrow+\infty}0 \Rightarrow 1-e^{-\lambda
+    x}\xrightarrow{x\rightarrow+\infty}1$. Somit gelten alle vier Bedingungen.
+  \end{proof}
+\end{beispiel}
 
+\begin{beispiel}
   Sei $A\in\FB_n$ mit $0<\ell^{(n)}(A)\leq +\infty$. Wir setzen:
   \[\Gl_A(B)\colon=\frac{\ell^{(n)}(A\cap B)}{\ell^{(n)} (A)}\qquad
   (B\in\FB_n)\]
@@ -3610,7 +3656,7 @@ einen kleinen Abstand bedeutet dies, dass der Zufall gering ist.
 Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
 über diesen Wahrscheinlichkeitsraum.
 
-\begin{satz}[Die Markoffsche Ungleichung]
+\begin{satz}[Markoffsche Ungleichung]
   \label{satz:markoff}
   Sei $\xi\geq 0$ eine Zufallsgröße\footnote{Damit existiert $\int\xi
     d\mu$ nach der Definition zweiter Stufe immer.} und $a>0$ eine
@@ -3834,29 +3880,63 @@ für alle Stetigkeitspunkte von $F_Q$.
 \end{satz*}
 
 \begin{definition}
-  Sei $(\eta)_{n=1}^\infty, \eta$ eine zufällige Größe. Dann
-  konvergiert $(\eta_n)_{n=1}^\infty$ mit Wahrscheinlichkeit 1 gegen
-  $\eta$, wenn gilt\footnote{Schreibweise: $\eta_n\xrightarrow{P=1} \eta$}:
-  \[P(\text{"`}\lim \eta_n =\eta\text{"'})=1\]
+  Sei $(\eta)_{n=1}^\infty, \eta$ eine zufällige Größe. Dann konvergiert
+  $(\eta_n)_{n=1}^\infty$ mit Wahrscheinlichkeit 1 (fast sicher) gegen $\eta$,
+  wenn gilt\footnote{Schreibweise: $\eta_n\xrightarrow{P=1} \eta$}:
+  \[P(\text{"`}\lim \eta_n =\eta\text{"'})=1=P(\{\omega\in\Omega\colon
+  \eta(\omega)=\lim_{n\rightarrow\infty} \eta_{n}(\omega)\})\]
 \end{definition}
 
 \begin{satz*}
   \[\eta_n\xrightarrow{P=1} \eta \Rightarrow \eta_n\xrightarrow{P} \eta\]
+  Die Umkehrung dieses Satzes ist im Allgemeinen falsch.
 \end{satz*}
 
-\begin{satz}[Starkes Gesetz der großen Zahlen]
-  Sei $(\xi_k)_{1}^n$ eine Folge unabhängiger identisch verteilter
-  Zufallsgrößen mit endlichem Erwartungswert. Dann gilt:
-  \[\frac{1}{n} \sum_{k=1}^n \xi_k \xrightarrow{P=1} E\xi_1\]
-\todo{Beweis muss ergänzt werden}
+\begin{remark}
+  Andere Formulierung:\\
+   Wenn zu jeder Teilfolge eine Teilfolge existiert, so dass man immer
+   Konvergenz in Wahrscheinlichkeit hat, hat man auch fast sichere Konvergenz.
+\end{remark}
+
+\begin{satz}[Starkes Gesetz der großen Zahlen nach Kolmogoroff]
+  Sei $(\xi_k)_{k=1}^n$ eine Folge unabhängiger identisch verteilter
+  Zufallsgrößen mit endlichem Erwartungswert $a$. Dann gilt:
+  \[\frac{1}{n} \sum_{k=1}^n \xi_k \xrightarrow{P=1} a\]
 \end{satz}
 
+\begin{remark}
+  Betrachten Zufallsgrößen mit $E\abs{\xi}^{p}<+\infty$  und führt hier eine
+  Konvergenz ein. Diese Räume werden als $L_{p}$"~Räume bezeichnet. Es gilt
+  dann $L_{p}(\Omega,\CF,P)$ und man hat die Spezialfälle:
+  \begin{enumerate}
+   \item $p=1\rightarrow \rho(\eta,\xi)\colon=E\abs{\xi-\eta}$
+   \item $p=2\rightarrow\langle f,g\rangle\colon= \int\overline{f} gdP$. Der
+    Raum $L_{2}$ ist der \highl{Hilbertraum} mit $\norm{f}^{2}= \langle
+    f,f\rangle$.
+  \end{enumerate}
+\end{remark}
 
-\begin{satz}[Satz von Weierstraß]
-  Sei $f\colon[0,1]\rightarrow \R$ stetig. Weiter sei $b_n^f(x):=
-  \sum_{k=0}^n f(\frac{n}{k})\binom{n}{k}x^k(1-x)^{n-k}$ ein
+
+\begin{satz}[Spezialfall des Satz von Weierstraß]
+  Sei $f\colon[0,1]\rightarrow \R$ stetig. Weiter sei $b_n(x):=
+  \sum_{k=0}^n f(\frac{k}{n})\binom{n}{k}x^k(1-x)^{n-k}$ ein
   Bernoullipolynom mit $x\in[0,1]$. Dann gilt:
-  \[\limn b_n^f(x)=f(x)\]
+  \[\limn b_n(x)=f(x)\]
+  \begin{proof}
+    Der Beweis erfolgt durch die Anwendung des schwachen Gesetzes der großen
+    Zahlen (\autoref{satz:schwachges-571}).
+    Seien $\xi_{1},\dotsc,\xi_{n}$ unabhängige, identische verteilte
+    Zufallsgrößen mit $P_{\xi_{i}}=B_{1,x}\Rightarrow E\xi_{k}=x,
+    D\xi_{k}=x(1-x)$. Aus dem obigen Gesetz folgt $\nicefrac{1}{n}
+    \sum_{k=1}^{n} \xi_{k}\xrightarrow{P} x$. Dies ist gleichwertig zu
+    $P_{\nicefrac{1}{n} \sum_{k=1}^{n} \xi_{k}}
+    \Rightarrow\delta_{x}\Leftrightarrow \int f(y)P_{\nicefrac{1}{n}
+    \sum_{k=1}^{n} \xi_{k}}(dy)\Rightarrow\int f(y)\delta_{x}(dy)=f(x)$. Nach
+    dem Übertragungssatz ist $\int f(y)P_{\nicefrac{1}{n}
+    \sum_{k=1}^{n} \xi_{k}}(dy)= \int f(\nicefrac{y}{n})P_{\sum_{k=1}^{n}
+    \xi_{k}} (dy)= \sum_{k=1}^{n} f(\nicefrac{k}{n}) a_{k}= \sum_{k=1}^{n}
+    f(\nicefrac{k}{n}) \binom{n}{k} x^{k} (1-x)^{n-k}$.
+  \end{proof}
 \end{satz}
 
 \appendix
