--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -178,7 +178,7 @@
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
 \newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-%\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
