• fey-recharch/zusammenfassung_ra_2/zsfsg.tex   · Die Funktion ld durch \ld ersetzt.
  · Für den Microcontroller \textmu{}C statt $\mu$ verwendet.

  · \noindent nach \chapter ist sinnlos, weil an dieser Stelle nie ein Einzug
    gemacht wird.

  · Die min‐ und max‐Funktionen durch \min und \max ersetzt. Dann funktioniert
    auch das drunterschreiben mit _.

  · Alle *, die einen Malpunkt darstellen sollen, durch \cdot ersetzt.

  · Einen Hinweis für JLM eingefügt, wo er die Hauptdatei findet.

• fey-recharch/skript.latex
  · Mich in die Liste der Mitwirkenden eingetragen.

  · \ld als Mathefunktion mit DeclareMathOperator definitiert.

  · Für DeclareMathOperator amsmath eingebunden und gleich noch die Pakete
    onlyamsmath und fixmath.

  · Für \textmu das Paket textcomp eingebungen.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1091 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fey-recharch/zusammenfassung_ra_2/zsfsg.tex
+++ b/fey-recharch/zusammenfassung_ra_2/zsfsg.tex
@@ -1,7 +1,7 @@
 
 \chapter{Spezialprozessoren}
 
-\noindent Im Unterschied zu Universalprozessoren sind Spezialprozessoren
+Im Unterschied zu Universalprozessoren sind Spezialprozessoren
 weniger flexibel einsetzbar, können dafür jedoch mit einer größeren
 Leistungsfähigkeit bei speziellen Problemen aufwarten.
 
@@ -44,16 +44,16 @@ Mikrocontroller weisen die höchsten Stückzahlen auf. Meist sind
 periphere Einheiten direkt auf dem Mikrocontroller integriert, etwa A/D,
 D/A-Wandler und dergleichen.
 
-Einfache, kostengünstige Mikrocontroller arbeiten mit 4/8Bit-Prozessoren
+Einfache, kostengünstige Mikrocontroller (\textmu{}C) arbeiten mit 4/8Bit-Prozessoren
 und die Codegröße nimmt den meisten Platz auf der Chipfläche ein und
-dominiert damit die Kosten des $\mu$C. Die Anforderungen an seine
-Rechenleistung sind eher gering. Die Klasse der Hochleistungs-$\mu$C
+dominiert damit die Kosten des \textmu{}C. Die Anforderungen an seine
+Rechenleistung sind eher gering. Die Klasse der Hochleistungs-\textmu{}C
 hingegen arbeitet mit 16/32/64 Bit Prozessoren und wird in
 steuerungsrelevanten Anwendungen, die zusätzlich hohe Datenraten
 erfordern, eingesetzt, z.Bsp. in der Automobiltechnik oder in der
-Telekommunikation. An diese $\mu$C werden hohe Berechnungsanforderungen
+Telekommunikation. An diese \textmu{}C werden hohe Berechnungsanforderungen
 gestellt, etwa in der Regelungstechnik oder der Signalverarbeitung.
-Diese $\mu$C bilden oft den Kern eines \emph{System-On-A-Chip}.
+Diese \textmu{}C bilden oft den Kern eines \emph{System-On-A-Chip}.
 
 \begin{center}
 \includegraphics{proz_kosten_leistung}
@@ -670,17 +670,17 @@ Probleme, die in polynomieller Zeit lösbar sind. Ziel der Betrachtung
 ist die \emph{Minimierung der Latenz}. Formal ausgedrückt bedeutet dies:
 
 \begin{center}
-$min\{L|\tau(v_i) - \tau(v_j) \geq d_i, \forall (v_i,v_j) \in E\}$
+$\min\{L|\tau(v_i) - \tau(v_j) \geq d_i, \forall (v_i,v_j) \in E\}$
 \end{center}
 
 \begin{center}
-mit (Latenz) $L=max_{v_i \in V}\{\tau(v_i) - d_i\} - min_{v_i \in V}\{\tau(v_i)\}$
+mit (Latenz) $L=\max_{v_i \in V}\{\tau(v_i) - d_i\} - \min_{v_i \in V}\{\tau(v_i)\}$
 \end{center}
 
 Es existieren zum einen der \texttt{ASAP}-Algorithmus und zum anderen der
 \texttt{ALAP}-Algorithmus.  Die Idee des \texttt{ASAP}-A. ist jede Operation
 so \emph{früh} wie möglich zu starten und liefert damit die gesuchte
-\emph{minimale Latenz }$L^S$. Der \texttt{ALAP}- A. startet jede Operation
+\emph{minimale Latenz} $L^S$. Der \texttt{ALAP}- A. startet jede Operation
 so \emph{spät} wie möglich und man erhält eine obere Latenzschranke. Man
 erhält ein Intervall für mögliche Startzeitpunkte aller Knoten, genannt
 \emph{Mobilität} $\mu$. Dies dient als Ausgangspunkt für Algorithmen
@@ -914,7 +914,7 @@ Netzwerken von Workstations, etwa \emph{Cluster-Computing}.
 						Prozessors $h$, Maß für die in einem Prozessor
 						durchgeführten Berechnungen $w$
 					\item $Kosten(Superschritt)=MAX_i {w_i} + MAX_i
-						{h_i} * g + l$
+						{h_i} \cdot g + l$
 				\end{itemize}
 		\end{itemize}
 \end{itemize}
@@ -1082,7 +1082,7 @@ Gitterstrukturen. Entspricht dem klassischen SIMD-Prinzip.
 			\item Superrechner von 72-81, für numerische Probleme
 			\item 64 parallele Verarbeitungseinheiten, Steuereinheit
 				(SE)
-			\item 40ns Taktzyklus, lokaler Speicher 2K*64Bit
+			\item 40ns Taktzyklus, lokaler Speicher $2K\cdot64Bit$
 			\item NEWS-Netzwerk(North-East-West-South)
 			\item SE: Kompilierung Userprogramm, Verteilung Befehlskode,
 				Ausführung Systemsoftware
@@ -1530,9 +1530,9 @@ $\rightarrow$ Blickpunkt: Algorithmen und Architekturen
 		Programmanteil $s$\,\% beträgt?
 	\item $T_O(n,p)=0$ !
 		\begin{center}
-			$T_1(n)=T_{seriell}(n) + T_{parallel}(n) = s * T_1(n) +
-			(1-s)*T_P(n)$\\
-			$T_P(n,p)=s*T_1(n)+(1-s)*T_p(n)/p$
+			$T_1(n)=T_{seriell}(n) + T_{parallel}(n) = s \cdot T_1(n) +
+			(1-s)\cdot T_P(n)$\\
+			$T_P(n,p)=s\cdot T_1(n)+(1-s)\cdot T_p(n)/p$
 		\end{center}
 \end{itemize}
 
@@ -1544,7 +1544,7 @@ $\rightarrow$ Blickpunkt: Algorithmen und Architekturen
 	\item Zusatzaufwand vernachlässigt, wie Amdahl
 	\item Lösung: \emph{skalierter Speed-Up}:
 		\begin{center}
-			$S(n,p) \leq p+(1-p)*s^* = p - (p-1)*s^* $
+			$S(n,p) \leq p+(1-p)\cdot s^* = p - (p-1)\cdot s^* $
 		\end{center}
 \end{itemize}
 
@@ -1555,7 +1555,7 @@ $\rightarrow$ Blickpunkt: Algorithmen und Architekturen
 		\begin{itemize}
 			\item experimentell bestimmter serieller Anteil
 				\begin{center}
-					$e=\frac{T_{ser}(n)+T_O(n,p)}{T_{ser}(n)*T_{par}(n)}$
+                                  $e=\frac{T_{ser}(n)+T_O(n,p)}{T_{ser}(n) \cdot T_{par}(n)}$
 				\end{center}
 			\item dabei gilt:
 				\begin{center}
@@ -1707,7 +1707,7 @@ CPU-GlobalerSpeicher
 				\end{itemize}
 		\end{itemize}
 	\item Anzahl Ecken $n=2^d$
-	\item Maximale Weglänge $d=ld (n)$
+	\item Maximale Weglänge $d=\ld (n)$
 	\item $\rightarrow$ viele Wegalternativen, hohe Redudanz,
 		unterstützt Parallelität
 	\item Routing im Hypercube
@@ -1787,15 +1787,15 @@ CPU-GlobalerSpeicher
 \paragraph{Binäres Benes Netzwerk}
 \begin{itemize}
 	\item universell, alle $n!$-Permutationen schaltbar
-	\item Anzahl Kreuzschinenverteiler: $n*ld(n)-\frac{n}{2}$
-	\item Pro Stufe $n/2$ Verteiler $\rightarrow$ $2*ld(n)-1$ Stufen
+	\item Anzahl Kreuzschinenverteiler: $n\cdot\ld(n)-\frac{n}{2}$
+	\item Pro Stufe $n/2$ Verteiler $\rightarrow$ $2\cdot\ld(n)-1$ Stufen
 		nötig
 \end{itemize}
 
 \paragraph{Omega Netzwerk}
 \begin{itemize}
 	\item Perfect Shuffle zwischen allen Stufen
-	\item $ld(n)$ Stufen erforderlich
+	\item $\ld(n)$ Stufen erforderlich
 	\item nicht alle Permutationen möglich $\rightarrow$ nicht
 		universell
 	\item \emph{selbstkonfigurierend} - einfacher Routingalgo:
@@ -1808,7 +1808,7 @@ CPU-GlobalerSpeicher
 \paragraph{Binäres n-Cube Netzwerk}
 
 \begin{itemize}
-	\item ld(n) Stufen
+	\item $\ld(n)$ Stufen
 	\item Routing-Algo:
 		\begin{itemize}
 			\item Unterscheiden sich quell und ziel an k-ter stelle so
@@ -1826,7 +1826,7 @@ CPU-GlobalerSpeicher
 
 \paragraph {Batcher Sortier Netzwerk}
 \begin{itemize}
-	\item Anzahl Stufen: $ld(n)*(1+ld(n))/2$
+	\item Anzahl Stufen: $\ld(n)\cdot(1+\ld(n))/2$
 	\item keine Binären Schalter!
 \end{itemize}
 
@@ -1855,5 +1855,4 @@ CPU-GlobalerSpeicher
 
 \todo {}
 
-%\end{document}
-
+% LaTeX_master_file: ../skript.latex
